@@ -19,8 +19,10 @@ sub opt_spec {
     my ($self, $app) = @_;
 
     return (
-        [ 'default'         => 'Make the new stack the default stack' ],
-        [ 'description|d=s' => 'Brief description of the stack'       ],
+        [ 'default'               => 'Make the new stack the default stack' ],
+        [ 'description|d=s'       => 'Brief description of the stack'       ],
+        [ 'message|m=s'           => 'Message to describe the change'       ],
+        [ 'use-default-message|M' => 'Use the generated message'            ],
     );
 
 
@@ -34,18 +36,9 @@ sub validate_args {
     $self->usage_error('Must specify exactly one stack')
         if @{$args} != 1;
 
+    $opts->{stack} = pop @{ $args };
+
     return 1;
-}
-
-#------------------------------------------------------------------------------
-
-sub execute {
-    my ($self, $opts, $args) = @_;
-
-    my $result = $self->pinto->run($self->action_name, %{$opts},
-                                                       stack => $args->[0]);
-
-    return $result->exit_status;
 }
 
 #------------------------------------------------------------------------------
@@ -88,6 +81,27 @@ Also mark the new stack as the default stack.
 
 Use TEXT for the description of the stack.  This is usually used to
 help explain the purpose of the stack.
+
+=item --message=TEXT
+
+=item -m TEXT
+
+Use TEXT as the revision history log message.  If you do not use the
+C<--message> option or the C<--use-default-message> option, then you
+will be prompted to enter the message via your text editor.  Use the
+C<EDITOR> or C<VISUAL> environment variables to control which editor
+is used.  A log message is not required whenever the C<--dryrun>
+option is set, or if the action did not yield any changes to the
+repository.
+
+=item --use-default-message
+
+=item -M
+
+Use the default value for the revision history log message.  Pinto
+will generate a semi-informative log message just based on the command
+and its arguments.  If you set an explicit message with C<--message>,
+the C<--use-default-message> option will be silently ignored.
 
 =back
 
